# New_MCP

./: .gitignore  README.md  mcp.json  pyproject.toml  start_mcp_server.ps1
.pytest_cache/v/cache/: lastfailed  nodeids
env/: .env  .env.template
src/: config.py  mcp_server.py  mcp_server_old.py  pcloudy_api.py  security.py  utils.py
src/api/: __init__.py  adb.py  app_management.py  auth.py  device.py  device_control.py  file_management.py  platform.py  qpilot_appium_control.py  qpilot_code_script.py  qpilot_credits.py  qpilot_device_service.py  qpilot_project.py  qpilot_script.py  qpilot_steps.py  qpilot_test_case.py  qpilot_test_suite.py  services.py  session.py  wildnet.py
src/mcp_server/: __init__.py  device_control_tool.py  device_management_tool.py  file_app_management_tool.py  server.py  server_main.py  session_analytics_tool.py  shared_mcp.py
src/mcp_server/tools/: __init__.py  appium_capabilities_tool.py  appium_control_tool.py  device_control_tool.py  device_management_tool.py  file_app_management_tool.py  qpilot_credits_tool.py  qpilot_project_tool.py  qpilot_run_script_params.py  qpilot_script_tool.py  qpilot_steps_tool.py  qpilot_test_case_tool.py  qpilot_test_suite_tool.py  qpilot_tool.py  (+1 more)
src/pcloudy_api/: __init__.py  core.py  device_control.py  device_management.py  file_management.py  session_management.py
tests/: conftest.py  test_adb_prefix.py  test_appium_capabilities.py  test_authenticate.py  test_book_device.py  test_get_devices_list.py  test_qpilot_tool.py  test_release_device.py  test_services_mixin.py  test_start_performance_data.py
