[project]
name = "pcloudy"
version = "0.1.0"
description = "pCloudy MCP Server: Category-based FastMCP tools for device, app, session, Appium automation, and analytics management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.1",
    "fastmcp>=2.5.1",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.1",
    "appium-python-client>=3.1.0",  # For Appium capabilities tool
]

[tool.pytest.ini_options]
addopts = "-ra -q --tb=short --disable-warnings"
testpaths = ["tests"]
